@@ -1,6 +1,9 @@
 v2.7:
 - Added an input option for showing multiple text fields
 - Added a dialog for showing multiple text fields.
+- Added a way to check Sim demographics for containing ANY value.
+- Fixed an issue with the returned value of `CommonSimPregnancyUtil.has_permission_for_pregnancies_with`
+- Fixed an issue when adding custom careers to Sims using the command.
 
 v2.6:
 - Fixed a few errors when cloning Sims.
